--- a/css/home.css
+++ b/css/home.css
@@ -72,3 +72,14 @@ div.upload {
     position:relative;
     width: auto;
 }
+
+.displayOnly {
+    border: 0;
+    outline: 0;
+    background: transparent;
+    border-bottom: 1px solid black;
+    width: 100%;
+    padding: 0px 0px;
+    margin: 0px;
+    height: 18px;
+}
