--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,6 @@
+a.childFormLinker {
+    text-decoration: underline;
+}
 .dz-details, .dz-progress, .dz-error-message, .dz-success-mark, .dz-error-mark {
     display: none;
 }
