--- a/css/home.css
+++ b/css/home.css
@@ -54,9 +54,9 @@ td.highlight {
     background-color: whitesmoke !important;
 }
 
-.form-control {
+/* .form-control {
     margin: 2px;
-}
+} */
 
 .no-border {
     border: 0;
