In Progress - Report 360

--- a/css/home.responsive.css
+++ b/css/home.responsive.css
@@ -2,10 +2,27 @@
     #reportFrame {
         height: 700px;
     }
+    .displayRecordTemplate {
+        overflow-y: auto;
+        height: 450px;
+    }
+    .searchRecords {
+        overflow-y: auto;
+        height: 580px;
+    }
 }
   
 @media only screen and (max-height: 900px) {
     #reportFrame {
         height: 500px;
     }
+    .displayRecordTemplate {
+        overflow-y: auto;
+        height: 350px;
+    }
+    .searchRecords {
+        overflow-y: auto;
+        height: 480px;
+    }
 }
+
